<resources>
    <string name="app_name">QA_App</string>
    <string name="action_settings">設定</string>
    <string name="mail">メールアドレス</string>
    <string name="password">パスワード(6文字以上)</string>
    <string name="show_name">表示名</string>
    <string name="login">ログイン</string>
    <string name="make_account">アカウント作成</string>
    <string name="hobby">趣味</string>
    <string name="life">生活</string>
    <string name="health">健康</string>
    <string name="computer">コンピューター</string>
    <string name="favorite">お気に入り</string>


</resources>
